update tokenomics + privacy tech point intro

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -199,8 +199,15 @@ AntsReview has few tokens, each of which plays an integral role in the functioni
 \newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for Ant and wraped into zkAnt to allow anonymity and send equally to the peer-reviewers that fulfilled the AntReview.
 \newline zkAnt, is token wraped into AZTEC Protocol zkSNARKs, that will be extended to PLONK Proof to collapse the gas costs of private transactions on mainnet.
 \newline zkAnt will be implemented via AZTEC 2.0 that will allow to securily wrap the Ant Token into zkAnt, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
-
+\newline Finally, another concept under investigation is Quadratic Funding, used by Gitcoin to match donations for Grants. This will allow to incentives prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank best Peer-Reviewers.
 \subsubsection{Privacy}
+
+The Anonymity of an agent in the system is achieved in two ways:
+
+\begin{itemize}
+  \item PseudoAnonimity granted by an Etherum address that can obscure the identity of the agent.
+  \item Private Transactions thanks to AZTEC Protocol security layer via zkAnt.
+\end{itemize}
 
 \section{Discussions}
 \subsection{A new community-driven standard?}
