--- a/samplepaper.tex
+++ b/samplepaper.tex
@@ -123,8 +123,8 @@ and a homepage~\cite{ref_url1}. Multiple citations are grouped
 % BibTeX users should specify bibliography style 'splncs04'.
 % References will then be sorted and formatted in the correct style.
 %
-% \bibliographystyle{splncs04}
-% \bibliography{mybibliography}
+\bibliographystyle{splncs04}
+\bibliography{mybibliography}
 %
 \begin{thebibliography}{8}
 \bibitem{ref_article1}
