--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -186,20 +186,25 @@ AntsReviewRoles[appendix A], to ensure integrity of the system, implements an ac
 \newline As the pioneers of blockchain an cited by Bitcoin whitepaper, they were in a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin as its first application.
 \newline In Ethereum the concept of immutability is achieved via the blockchain and proof of work consesus algorithm by a chain of timestamped block hashes that are secured by miners competing computations.
 \newline AntsReview is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
-\newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree containing representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending with a single root hash.
+\newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending on top with a single root hash.
 \newline In order to verify if a spefic hash is included into a Markle Tree, leveraging on MerkleProof.sol by OpenZeppelin Library, we need to provide a proof, generated from the leaf of interest, that rapresent the remification derived from the leaf, the root hash and finally the leaf we want to verify.
-\newline On the Front-End the file will be included into a Merkle Tree by hashing the data using keccak256, a cryptographic hashing algorithm available in Solidiy, an object-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine (EVM).
+\newline The paper and peer-reviews documents will be included into a Merkle Tree by hashing the data using keccak256, a cryptographic hashing algorithm available in Solidiy, an object-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine (EVM).
 
 \subsubsection{Tokenomics}
 AntsReview has few tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
+\medskip
 \newline \textbf{Ant}, is the primary protocol token and can be staked into an AntReview if you wish to provide the protocol with an additional security promise.
 \newline Ant [\ref{appendix:c}] is implemented by inheriting ERC20PresetMinterPauser.sol from OpenZeppelin Library with name: \textbf{\emph{Ant}} ans symbol: \textbf{\emph{ANT}}.
 \newline An AntReview, issued by an author will be seen as a poll where Anters (members of the AntsReview Community) can stake ether or tokens from DeFi services including Dai, Chai, ... with the possibity to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR or Compound to cite a few.
+\medskip
 \newline An \textbf{AntsReview DAO} will be formed in the future to allow Ant stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings accross the protocol.
+\medskip
 \newline \textbf{Hive}. When a Anter deposits into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
-\newline Hive will be implemented using a similar approach to Ant and Chai, a token that accures interest from MakerDAO's DSR (Dai Saving Rate), with name: \textbf{\emph{Hive}} and symbol: \textbf{\emph{HIVE}}
+\newline Hive will be implemented using a similar approach to Ant and Chai, a token that accures interest from MakerDAO's DSR (Dai Saving Rate), with name: \textbf{\emph{Hive}} and symbol: 
+\textbf{\emph{HIVE}}
 \newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for Ant and wraped into zkAnt to allow anonymity and send equally to the peer-reviewers that fulfilled the AntReview.
+\medskip
 \newline \textbf{zkAnt}, is token wrapped into AZTEC Protocol zkSNARKs, that will be extended to PLONK Proof to collapse the gas costs of private transactions on mainnet.
 \newline zkAnt will be implemented via AZTEC 2.0 that will allow to securily wrap the Ant Token into zkAnt, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
 \newline Finally, another concept under investigation is Quadratic Funding, used by Gitcoin to match donations for Grants. This will allow to incentives prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank best Peer-Reviewers.
@@ -213,8 +218,6 @@ The Anonymity of an agent in the system is achieved in two ways:
 \end{itemize}
 
 \newline Externally Owned Accounts (EOA) in Ethereum are controlled by private keys, are 20 bytes long and have no code. An user can send messages from an externally owned account by creating and signing a transaction.
-\newline
-
 \newline AZTEC Protocol
 
 \section{Discussions}
@@ -250,7 +253,7 @@ TDB
 The authors declare no competing interests.
 
 \subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi and Keno Budde for internal review and useful comments.
-
+here I want to \cite{10.5281/zenodo.3828087,10.1093/biosci/bix034} 
 \newpage
 
 \section{Appendix}
@@ -607,6 +610,6 @@ The authors declare no competing interests.
 % References will then be sorted and formatted in the correct style.
 %
 \bibliographystyle{splncs04}
-\bibliography{references.bib}
+\bibliography{ourreferences.bib,privacy.bib}
 
 \end{document}
